--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
-    "mongoose": "^6.3.4"
+    "express-session": "^1.17.3",
+    "mongoose": "^6.3.4",
+    "mongoose-session": "0.0.4"
   }
 }
